[package]
authors = ["Wojciech Bartnik <yisonPylkita@gmail.com>"]
edition = "2018"
name = "sleep-overhead"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
structopt = {version = "0.3", default-features = false}
